--- a/portfolio-main/src/App.scss
+++ b/portfolio-main/src/App.scss
@@ -438,6 +438,7 @@ body {
 .logo-div {
   display: flex;
   text-decoration: none;
+  // color: azure;
   color: azure;
   // margin-left: 50px;
   align-items: center;
@@ -445,7 +446,7 @@ body {
   p {
     text-align: center;
     // letter-spacing: 1px;
-    color: #8892b0;
+    color: #64ffda;
     // color: red;
     // stroke: yellow;
     margin-top: 25px;
